# herald

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: test.yml
.sdlc/: started
examples/: agent-teams.py  heartbeat-prompt-dev-environment.md  heartbeat-prompt-knowledge-base.md
experiments/: test_agent_teams.py
src/herald/: __init__.py  chat_history.py  config.py  executor.py  formatter.py  main.py  webhook.py
src/herald/heartbeat/: __init__.py  active_hours.py  classifier.py  config.py  delivery.py  executor.py  interval.py  reader.py  scheduler.py
tests/: __init__.py  test_active_hours.py  test_chat_history.py  test_config.py  test_executor.py  test_formatter.py  test_heartbeat_classifier.py  test_heartbeat_config.py  test_heartbeat_delivery.py  test_heartbeat_executor.py  test_heartbeat_reader.py  test_heartbeat_scheduler.py  test_interval.py  test_webhook.py  test_webhook_chat_history_integration.py
